Added Testing with Capybera/RSpec

--- a/config/database.yml
+++ b/config/database.yml
@@ -5,7 +5,7 @@ development: &default
   database: postgres
   pool: 5
   username: b0otleg
-  password: z3dcf73e
+  password: pass123
   host: localhost
 
 test:
